trying to fix images not showing on deployed version

--- a/src/styles/_Home.scss
+++ b/src/styles/_Home.scss
@@ -7,7 +7,7 @@
     margin-top: 100px;
     height: 100vh;
     width: 100%;
-    background-image: url("/src/assets/home_wall.jpg");
+    background-image: url("/static/home_wall.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     color: $white;
